--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@ body { /* Estilos generales para toda la página */
   font-family: Arial, sans-serif; /* Fuente de texto principal */
   margin: 0; /* Elimina los márgenes por defecto */
   padding: 0; /* Elimina los rellenos por defecto */
-  background: #f4f4f9; /* Color de fondo gris claro */
+  background: #f4f4f9; /* Color de fondo verde oscuro */
 }
 
 header { /* Estilos para el encabezado */
-  background: #333; /* Fondo gris oscuro */
+  background: #333; /* Fondo rojo oscuro */
   color: white; /* Texto en color blanco */
   text-align: center; /* Centra el texto horizontalmente */
   padding: 1rem; /* Relleno interno de 1 unidad rem */
@@ -52,18 +52,7 @@ h2 { /* Estilos para subtítulos */
 
 .comment-form .btn-delete { /* Botón de borrar comentarios */
   background: darkred; /* Fondo rojo oscuro */
-}
-//---- BLOQUE DE SEGURIDAD ----
-let pass = promt("introduce la contraseña para acceder al blog");
-const passwordCorrecta = "1528";
-
-if (pass ¡== passwordCorrecta) {
-     document.body.innerHTML = h1AccesoDenegado /h1";
-}else{
-  //solo si la contraseña es correcta carga los comentarios guardados
-  windod.onload = function () {
-    const comentriosGuardados = JSON.parse(localstorage.getitem('comentarios'))
-    comenntariosGuardados.forEach(c = mostrarComentarios(c));
+} 
 
     .comment-form .btn-delete:hover { /* Efecto hover para el botón de borrar */
   background: red; /* Cambia a rojo brillante */
